Random Quote Machine + adding signature & minor changes

--- a/Ziplines/Build_A_Tribute_Page/Tribute_Page.html
+++ b/Ziplines/Build_A_Tribute_Page/Tribute_Page.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
     <link href='Tribute_Page.css' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
     <link href="http://typecast.com/images/uploads/modernscale.css" type='text/css'>
 
 </head>
@@ -553,6 +554,12 @@
     </div>
 
 </div>
+
+<div id="creator">
+    <p>by SquishyCoder</p>
+    <a href="https://github.com/SquishyCoder" target="_blank"><img id="logo" src="https://raw.githubusercontent.com/SquishyCoder/Free_Code_Camp/master/Ziplines/images/GlassesOctopus2.png" alt="SquishyCoder logo"></a>
+</div>
+
 </div>
 
 </body>
