Reorganized and minor changes

--- a/Intermediate_Front_End_Dev_Projects/Random_Quote_Machine/Random_Quote_Machine.html
+++ b/Intermediate_Front_End_Dev_Projects/Random_Quote_Machine/Random_Quote_Machine.html
@@ -22,7 +22,8 @@
 </head>
 
 <body class="container-fluid">
-    <div id="back" class="row row-centered">
+    <div id="bar"></div>
+    <div class="back row row-centered">
         <div id="main" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-centered">
           <blockquote class="blockquote-reverse">
               <p id="blockq"></p>
@@ -36,6 +37,11 @@
             <p>by SquishyCoder</p>
             <a href="https://github.com/SquishyCoder" target="_blank"><img id="logo" src="https://raw.githubusercontent.com/SquishyCoder/Free_Code_Camp/master/Ziplines/images/GlassesOctopus2.png" alt="SquishyCoder logo"></a>
         </div>
+    </div>
+  
+    <div id="notice">
+        <p id="forismatic">Fab quotes thanks to <a href="http://forismatic.com/en/api/">Forismatic</a>.</p>
+        <p id="backgroundhost">Backround image courtesy of <a href="http://backgroundhost.com/">BackgroundHost</a>.</p>
     </div>
 
     <script>
